--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  gap: 5px;
+  background-color: #23272f;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.binary {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.binary:nth-child(2n){
+  margin-right: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.binary span {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 5px;
+  border-radius: 50%;
+  background-color :white;
+  transition: all .4s ease-in;
 }
+.binary span.off {
+  background-color: #3f4753;
+}
+.binary span.on {
+  background-color: #149eca;
+}
+.binary p {text-align: center; color : #3f4753}
